--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -51,6 +51,13 @@
         android:layout_marginBottom="5dp"
         app:layout_constraintBottom_toBottomOf="parent">
 
+        <ImageView
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:id="@+id/importImage"
+            android:layout_gravity="center_vertical"
+            android:src="@drawable/ic_image_black_24dp"/>
+
         <EditText
             android:layout_width="0dp"
             android:layout_height="match_parent"
